--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -286,6 +286,11 @@ h1{
         font-size: 55%;
         scroll-padding: 7rem;
       }
+
+      .swiper-slide img {
+        width: 25rem;
+        height: 25rem;
+      }   
 }
 
 @media (max-width:900px){
@@ -464,5 +469,7 @@ h1{
     .home .slide .content{
         top: 35%;
     }
+
+   
   
   }
