--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -437,16 +437,18 @@ h1{
         width: 90%;
 
         p{
-            font-size: 3.5rem;
+            font-size: 3.3rem;
         }
 
         h3{
-            font-size: 3.5rem;
+            font-size: 3.3rem;
         }
     }
 
     .home .slide .btn{
         top: 80%;
+        padding: 2rem 4rem;
+        font-size: 2rem;
     }
 }
 
