--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -6,7 +6,7 @@
   box-sizing: border-box;
   text-decoration: none;
   outline: none; border:none;
-  text-transform: capitalize; /*empezar la primera letra de la palabra en mayuscula */
+//   text-transform: capitalize; /*empezar la primera letra de la palabra en mayuscula */
   transition: all .2s linear; /* transicion de los hover, tambien para la transicion en responsivo */
 }
 
