subida de pagina

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -444,6 +444,13 @@ h1 {
     padding: 2rem 4rem;
     font-size: 2rem;
   }
+  .container-sobre-nosotros .sobre-nosotros-fondo .sobre-nosotros .quienes-somos {
+    height: 55rem;
+    width: 45rem;
+  }
+  .container-sobre-nosotros .sobre-nosotros-fondo .sobre-nosotros .quienes-somos .titulo-quienes-somos {
+    font-size: 2.8rem;
+  }
 }
 @media (max-width: 450px) {
   html {
