--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -527,6 +527,15 @@ h1{
         padding: 2rem 4rem;
         font-size: 2rem;
     }
+
+    .container-sobre-nosotros .sobre-nosotros-fondo .sobre-nosotros .quienes-somos{
+        height: 55rem;
+        width: 45rem;
+
+        .titulo-quienes-somos{
+            font-size: 2.8rem;
+        }
+    }
 }
 
 @media (max-width:450px){
