--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -287,6 +287,7 @@ h1{
         img{
             height: 50rem;
             width: 50rem;
+            box-shadow: 0px -10px 5px $azul; /* Propiedad de sombra en la parte superior */
         }
 
         .quienes-somos{
@@ -294,6 +295,7 @@ h1{
             width: 50rem;
             background: $blanco;
             border: 1px solid $azul;
+            box-shadow: 0px -10px 5px $azul; /* Propiedad de sombra en la parte superior */
 
             .titulo-quienes-somos{
                 color: $negro;
