--- a/css/estilos.css
+++ b/css/estilos.css
@@ -168,6 +168,9 @@ h1 {
   margin-top: 11rem;
   background: #F8F2FC;
 }
+.home .swiper {
+  box-shadow: 0px 8px 5px #001D84; /* Propiedad de sombra en la parte inferior */
+}
 .home .slide {
   min-height: 100vh;
   background-size: cover !important;
