--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -185,6 +185,10 @@ h1{
     margin-top: 11rem;
     background: #F8F2FC;
 
+    .swiper{
+        box-shadow: 0px 8px 5px $azul; /* Propiedad de sombra en la parte inferior */
+    }
+
     .slide{
         min-height: 100vh;
         background-size: cover !important; //se centra "casi" imagen
@@ -192,6 +196,7 @@ h1{
         padding: 0 ;  // se mueve texto
         display: flex;       // centra el texto en pantalla "abdomen" 
         align-items: center; // centra el texto en pantalla "abdomen"
+        
 
         .content{
             width: 50%;
