subida de pagina

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -68,12 +68,10 @@ h1 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 90%;
-  max-width: 1200px;
   height: 100%;
   margin: 0 auto;
   z-index: 10000;
-  padding: 2rem 0;
+  padding: 2rem 3%;
 }
 .menu__container .logo {
   color: #ffffff;
@@ -301,30 +299,44 @@ h1 {
   font-size: 1.6rem;
 }
 
-section .card-container {
+.card-container {
   display: flex;
   justify-content: space-between;
-  margin: 20px;
+  padding: 1rem 2%;
+  background: #F5F6F6;
 }
 
 .card {
   width: 30%;
-  border: 1px solid #ccc;
+  border: 1px solid #001D84;
   padding: 20px;
   margin: 10px;
-  text-align: center;
+  background: #ffffff;
+}
+.card img {
+  height: 40px;
+  width: 40px;
+}
+.card p {
+  font-size: 1.6rem;
+  margin: 1.5rem 0;
 }
 
 .card h2 {
+  font-size: 2.5rem;
   margin: 10px 0;
 }
 
 .read-more {
-  background-color: #007bff;
+  background-color: #001D84;
   color: #fff;
-  border: none;
+  border-radius: 0.3rem;
   padding: 5px 10px;
   cursor: pointer;
+  font-size: 1.5rem;
+}
+.read-more:hover {
+  font-size: 1.6rem;
 }
 
 .arrow {
@@ -365,6 +377,14 @@ section .card-container {
   }
   .home .btn {
     top: 90%;
+  }
+  .card-container {
+    flex-direction: column;
+  }
+  .card-container .card {
+    justify-content: center;
+    margin: 2rem auto;
+    width: 70%;
   }
 }
 @media (max-width: 800px) {
@@ -465,6 +485,9 @@ section .card-container {
   .menu__links {
     top: 110px;
   }
+  .card-container .card {
+    width: 80%;
+  }
 }
 @media (max-width: 500px) {
   .menu .menu__container .menu__links {
@@ -490,6 +513,9 @@ section .card-container {
   }
   .container-sobre-nosotros .sobre-nosotros-fondo .sobre-nosotros .quienes-somos .titulo-quienes-somos {
     font-size: 2.8rem;
+  }
+  .card-container .card {
+    width: 90%;
   }
 }
 @media (max-width: 450px) {
