--- a/css/estilos.css
+++ b/css/estilos.css
@@ -258,14 +258,14 @@ h1 {
 .container-sobre-nosotros .sobre-nosotros-fondo .sobre-nosotros img {
   height: 50rem;
   width: 50rem;
-  box-shadow: -4px -6px 6px #001D84; /* Propiedad de sombra en la parte superior */
+  box-shadow: -2px -2px 6px #001D84; /* Propiedad de sombra en la parte superior */
 }
 .container-sobre-nosotros .sobre-nosotros-fondo .sobre-nosotros .quienes-somos {
   height: 50rem;
   width: 50rem;
   background: #ffffff;
   border: 1px solid #001D84;
-  box-shadow: -4px -6px 6px #001D84; /* Propiedad de sombra en la parte superior */
+  box-shadow: -2px -2px 6px #001D84; /* Propiedad de sombra en la parte superior */
 }
 .container-sobre-nosotros .sobre-nosotros-fondo .sobre-nosotros .quienes-somos .titulo-quienes-somos {
   color: #000000;
@@ -308,23 +308,25 @@ h1 {
 
 .card {
   width: 30%;
-  border: 1px solid #001D84;
+  box-shadow: -1px -1px 6px #001D84; /* Propiedad de sombra en la parte superior */
   padding: 20px;
   margin: 10px;
   background: #ffffff;
 }
 .card img {
-  height: 40px;
-  width: 40px;
+  height: 45px;
+  width: 45px;
 }
 .card p {
   font-size: 1.6rem;
   margin: 1.5rem 0;
+  color: #272727;
 }
 
 .card h2 {
   font-size: 2.5rem;
   margin: 10px 0;
+  color: #001D84;
 }
 
 .read-more {
