--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -290,7 +290,7 @@ h1{
         img{
             height: 50rem;
             width: 50rem;
-            box-shadow: -4px -6px 6px $azul; /* Propiedad de sombra en la parte superior */
+            box-shadow: -2px -2px 6px $azul; /* Propiedad de sombra en la parte superior */
         }
 
         .quienes-somos{
@@ -298,7 +298,7 @@ h1{
             width: 50rem;
             background: $blanco;
             border: 1px solid $azul;
-            box-shadow: -4px -6px 6px $azul; /* Propiedad de sombra en la parte superior */
+            box-shadow: -2px -2px 6px $azul; /* Propiedad de sombra en la parte superior */
 
             .titulo-quienes-somos{
                 color: $negro;
@@ -351,25 +351,27 @@ h1{
 
 .card {
     width: 30%;
-    border: 1px solid $azul;
+    box-shadow: -1px -1px 6px $azul; /* Propiedad de sombra en la parte superior */
     padding: 20px;
     margin: 10px;
     background: $blanco;
 
     img{
-        height: 40px;
-        width: 40px;
+        height: 45px;
+        width: 45px;
     }
 
     p{
         font-size: 1.6rem;
         margin: 1.5rem 0;
+        color: #272727;
     }
 }
 
 .card h2 {
     font-size: 2.5rem;
     margin: 10px 0;
+    color: $azul;
 }
 
 .read-more {
