--- a/css/estilos.css
+++ b/css/estilos.css
@@ -304,7 +304,7 @@ h1 {
   color: #ffffff;
   font-size: 2rem;
   text-align: center;
-  margin: 4rem 3% 2rem 3%;
+  margin: 4rem 3% 1rem 3%;
   padding: 2rem 0;
 }
 .titulo-servicios hr {
@@ -362,6 +362,7 @@ h1 {
   font-size: 24px;
   margin-top: 20px;
   cursor: pointer;
+  background: #F5F6F6;
 }
 
 .hidden-cards {
