--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -347,7 +347,7 @@ h1{
     color: $blanco;
     font-size: 2rem;
     text-align: center;
-    margin: 4rem 3% 2rem 3%;
+    margin: 4rem 3% 1rem 3%;
     padding: 2rem 0;
 
     hr{
@@ -409,6 +409,7 @@ h1{
     font-size: 24px;
     margin-top: 20px;
     cursor: pointer;
+    background: $blanco-gris;
 }
 
 .hidden-cards {
