--- a/css/estilos.css
+++ b/css/estilos.css
@@ -304,7 +304,7 @@ h1 {
   color: #ffffff;
   font-size: 2rem;
   text-align: center;
-  margin: 4rem 4% 1rem 4%;
+  margin: 4rem 3% 1rem 3%;
   padding: 2rem 0;
 }
 .titulo-servicios hr {
@@ -535,6 +535,9 @@ h1 {
   }
   .card-container .card {
     width: 95%;
+  }
+  .titulo-servicios {
+    margin: 4rem 4% 1rem 4%;
   }
 }
 @media (max-width: 450px) {
