--- a/css/estilos.css
+++ b/css/estilos.css
@@ -369,6 +369,31 @@ h1 {
   display: none;
 }
 
+.fondo-azul {
+  position: relative;
+}
+.fondo-azul img {
+  width: 100%;
+  height: 18rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin: 2.5rem 0;
+  filter: brightness(0.6);
+}
+
+.fondo-azul .textos {
+  position: absolute;
+  bottom: 0;
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90%;
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+  font-size: 2.3rem;
+}
+
 @media (max-width: 991px) {
   html {
     font-size: 55%;
