--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -418,6 +418,33 @@ h1{
 
 
 
+//fondo azul
+.fondo-azul{
+    position: relative;
+
+    img{
+        width: 100%;
+        height: 18rem;
+        object-fit: cover;
+        margin: 2.5rem 0;
+        filter: brightness(0.6);
+    } 
+} 
+.fondo-azul .textos{
+    position: absolute;
+    bottom: 0;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
+    font-size: 2.3rem;
+}
+
+
+
 
 
 
