subida de pagina

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -517,6 +517,9 @@ h1 {
   .home .slide .content h3 {
     font-size: 3.2rem;
   }
+  .fondo-azul .textos {
+    font-size: 2rem;
+  }
 }
 @media (max-width: 680px) {
   .nav-superior {
@@ -531,6 +534,9 @@ h1 {
   }
   .card-container .card {
     width: 80%;
+  }
+  .fondo-azul .textos {
+    font-size: 1.8rem;
   }
 }
 @media (max-width: 500px) {
@@ -563,6 +569,12 @@ h1 {
   }
   .titulo-servicios {
     margin: 4rem 4% 1rem 4%;
+  }
+  .fondo-azul img {
+    height: 14rem;
+  }
+  .fondo-azul .textos {
+    font-size: 1.6rem;
   }
 }
 @media (max-width: 450px) {
