--- a/css/estilos.css
+++ b/css/estilos.css
@@ -393,6 +393,9 @@ h1 {
   justify-content: space-between;
   font-size: 2.3rem;
 }
+.fondo-azul .textos span {
+  display: flex;
+}
 
 @media (max-width: 991px) {
   html {
