--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -441,6 +441,10 @@ h1{
     display: flex;
     justify-content: space-between;
     font-size: 2.3rem;
+
+    span{
+        display: flex;
+    }
 }
 
 
