--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -449,7 +449,68 @@ h1{
 }
 
 
+//proyectos
+.titulo-proyectos{
+    background: $azul;
+    color: $blanco;
+    font-size: 2rem;
+    text-align: center;
+    margin: 1.8rem 3% 1rem 3%;
+    padding: 2rem 0;
 
+    hr{
+        border: 1px solid $blanco; /* Grosor y estilo del borde */
+        margin: 1rem auto ; /* Margen superior e inferior a 0 y margen izquierdo y derecho automáticos */
+        background-color: $azul; /* Color de fondo de la línea */
+        height: .1rem; /* Altura de la línea */
+        width: 15%; /* Modifica el largo de la línea horizontal */
+    }
+}
+
+.container-items{
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem 3%;
+    flex-wrap: wrap;
+}
+
+.container {
+    margin-bottom: 3rem;
+
+    .item-container{
+        position: relative;
+        overflow: hidden;
+
+        img{
+            height: 40rem;
+            width: 35rem;
+            object-fit: cover;
+        }
+
+        a{
+            position: absolute;
+            bottom: 25%;
+            left: 50%;
+            transform: translate(-50%, -0%);
+            text-align: center;
+            background: rgba(33, 32, 32, 0.5);
+            font-size: 2.2rem;
+            font-weight: bolder;
+            height: 100%;
+            width: 100%;
+            padding: 3rem 0;
+            color: $blanco;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+           
+
+            &:hover{
+                font-size: 2.3rem;
+            }
+        }
+    }
+}
 
 
 
@@ -637,6 +698,16 @@ h1{
     .fondo-azul .textos{
         font-size: 1.8rem;
     }
+
+    .container-items{
+        display: flex;
+        justify-content: center;
+
+        .container .item-container img{
+            height: 30rem;
+            width: 50rem;
+        }
+    }
 }
 
 @media (max-width:500px){
@@ -677,6 +748,10 @@ h1{
 
     .titulo-servicios{
         margin: 4rem 4% 1rem 4%;
+    }
+
+    .titulo-proyectos{
+        margin: 1.5rem 3% 1rem 3%;
     }
 
     .fondo-azul img{
