--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -512,6 +512,45 @@ h1{
     }
 }
 
+//video con texto
+.video-container{
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    padding-top: 10rem;
+
+    video {
+        width: 100%;
+        height: 33rem;
+        object-fit: cover;
+        filter: brightness(40%); // Más oscura
+    }
+
+    .texto-overlay {
+        position: absolute;
+        top: 45%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: rgba(12, 26, 98, 0.5);
+        color: #fff;
+        padding: 20px;
+        text-align: center;
+
+        h2{
+            font-size: 3rem;
+        }
+
+        hr{
+            border: 1px solid #ffffff; /* Grosor y estilo del borde */
+            margin: .5rem auto; /* Margen superior e inferior a 0 y margen izquierdo y derecho automáticos */
+            background-color: #ffffff; /* Color de fondo de la línea */
+            height: 0rem; /* Altura de la línea */
+            width: 70%; /* Modifica el largo de la línea horizontal */
+        }
+    }
+}
+
 
 
 
