--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -800,6 +800,10 @@ h1{
     .fondo-azul .textos{
         font-size: 1.6rem;
     }
+
+    .video-container .texto-overlay{
+        top: 30%;
+    }
 }
 
 @media (max-width:450px){
