--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -524,7 +524,6 @@ h1{
         width: 100%;
         height: 33rem;
         object-fit: cover;
-        filter: brightness(40%); // Más oscura
     }
 
     .texto-overlay {
@@ -801,9 +800,13 @@ h1{
         font-size: 1.6rem;
     }
 
+    .video-container{
+        padding-top: 13rem;
+    }
+
     .video-container .texto-overlay{
         width: 80%;
-        top: 30%;
+        top: 28%;
     }
 }
 
