--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -802,11 +802,10 @@ h1{
 
     .video-container{
         padding-top: 13rem;
-    }
 
-    .video-container .texto-overlay{
-        width: 80%;
-        top: 28%;
+        video{
+            height: 23rem;
+        }
     }
 }
 
