--- a/css/estilos.css
+++ b/css/estilos.css
@@ -457,7 +457,6 @@ h1 {
 .video-container {
   position: relative;
   width: 100%;
-  height: 100vh;
   overflow: hidden;
   padding-top: 10rem;
 }
@@ -466,6 +465,35 @@ h1 {
   height: 33rem;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.container-img-texto {
+  padding: 5rem 3%;
+}
+.container-img-texto .items-img-texto {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.container-img-texto .items-img-texto img {
+  width: 60rem;
+  height: 65rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.container-img-texto .items-img-texto .textos-servicio {
+  width: 60rem;
+  height: 65rem;
+  background: #F5F6F6;
+  padding: 3rem;
+}
+.container-img-texto .items-img-texto .textos-servicio h2 {
+  color: #001D84;
+  font-size: 3.5rem;
+  margin-bottom: 2rem;
+}
+.container-img-texto .items-img-texto .textos-servicio p {
+  font-size: 2rem;
 }
 
 @media (max-width: 991px) {
