--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -516,7 +516,6 @@ h1{
 .video-container{
     position: relative;
     width: 100%;
-    height: 100vh;
     overflow: hidden;
     padding-top: 10rem;
 
@@ -524,6 +523,40 @@ h1{
         width: 100%;
         height: 33rem;
         object-fit: cover;
+    }
+}
+
+.container-img-texto{
+    padding: 5rem 3%;
+
+    .items-img-texto{
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+
+        img{
+            width: 60rem;
+            height: 65rem;
+            object-fit: cover;
+        }
+
+        .textos-servicio{
+            width: 60rem;
+            height: 65rem;
+            background: $blanco-gris;
+            padding: 3rem;
+
+            h2{
+                color: $azul;
+                font-size:3.5rem;
+                margin-bottom: 2rem;
+            }
+
+            p{
+                font-size: 2rem;
+            }
+
+        }
     }
 }
 
