--- a/css/estilos.css
+++ b/css/estilos.css
@@ -418,10 +418,12 @@ h1 {
   justify-content: space-between;
   padding: 1rem 3%;
   flex-wrap: wrap;
+  background: #F5F6F6;
 }
 
 .container {
   margin-bottom: 3rem;
+  box-shadow: -1px -1px 6px #001D84; /* Propiedad de sombra en la parte superior */
 }
 .container .item-container {
   position: relative;
