--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -472,10 +472,12 @@ h1{
     justify-content: space-between;
     padding: 1rem 3%;
     flex-wrap: wrap;
+    background: $blanco-gris;
 }
 
 .container {
     margin-bottom: 3rem;
+    box-shadow: -1px -1px 6px $azul; /* Propiedad de sombra en la parte superior */
 
     .item-container{
         position: relative;
