--- a/css/estilos.css
+++ b/css/estilos.css
@@ -498,6 +498,77 @@ h1 {
   font-size: 2rem;
 }
 
+.footer {
+  margin: 6rem 0 0 0;
+  padding: 0 6%;
+  width: 100%;
+  height: 100%;
+  background: url(../img/fondo-azul.jpg);
+  background-attachment: fixed; /*imagen fija*/
+  background-position: 10%;
+  background-size: cover; /*toda la imagen*/
+  position: relative;
+  overflow: hidden;
+  color: #fff;
+}
+.footer .container-footer {
+  display: flex;
+  justify-content: space-between;
+  margin: 3rem 0 3rem 0;
+  flex-wrap: wrap;
+}
+.footer .container-footer .sobre-nosotros-footer {
+  width: 25%;
+}
+.footer .container-footer h3 {
+  font-size: 3rem;
+  font-family: "Pacifico", cursive;
+  color: #ffffff;
+}
+.footer .container-footer p {
+  color: #ffffff;
+  font-size: 1.8rem;
+}
+.footer .container-footer hr {
+  border: 1px solid rgb(255, 255, 255);
+  width: 100%;
+  margin: 0.5rem 0 2rem;
+}
+.footer .links-footer {
+  display: flex;
+  flex-direction: column;
+}
+.footer .links-footer a {
+  color: #ffffff;
+  font-size: 1.8rem;
+  margin-bottom: 0.5rem;
+}
+.footer .contactos-footer {
+  display: flex;
+  flex-direction: column;
+}
+.footer .contactos-footer span {
+  color: #ffffff;
+  font-size: 1.8rem;
+  margin-bottom: 0.5rem;
+}
+.footer .contactos-footer span i {
+  color: rgb(255, 255, 255);
+  margin-right: 0.5rem;
+}
+.footer .copy {
+  padding: 1.5rem 0;
+  text-align: center;
+  background: #001D84;
+  border-top: 2px solid rgb(0, 0, 0);
+}
+.footer .copy span {
+  font-size: 1.7rem;
+}
+.footer .copy span .span {
+  color: rgb(255, 255, 255);
+}
+
 @media (max-width: 991px) {
   html {
     font-size: 55%;
@@ -660,6 +731,16 @@ h1 {
   section .container-img-texto .items-img-texto img {
     width: 40rem;
     height: 30rem;
+  }
+  .footer .container-footer {
+    display: flex;
+    flex-direction: column;
+  }
+  .footer .container-footer hr {
+    width: 50%;
+  }
+  .footer .container-footer .sobre-nosotros-footer {
+    width: 90%;
   }
 }
 @media (max-width: 500px) {
