--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -562,6 +562,92 @@ h1{
     }
 }
 
+//footer
+.footer{
+    margin: 6rem 0 0 0;
+    padding: 0 6%;
+    width: 100%;
+    height: 100%;
+    background: url(../img/fondo-azul.jpg);
+    background-attachment: fixed; /*imagen fija*/
+    background-position: 10%;
+    background-size: cover; /*toda la imagen*/
+    position: relative;
+    overflow: hidden;
+    color: #fff;
+    // text-align: center;
+  
+    .container-footer{
+      display: flex;
+      justify-content: space-between;
+      margin: 3rem 0 3rem 0;
+      flex-wrap: wrap;
+  
+      .sobre-nosotros-footer{
+        width: 25%;
+      }
+  
+      h3{
+        font-size: 3rem;
+        font-family: 'Pacifico', cursive;
+        color: $blanco;
+      }
+  
+      p{
+        color: $blanco;
+        font-size: 1.8rem;
+      }
+  
+      hr{
+        border: 1px solid rgb(255, 255, 255);
+        width: 100%;
+        margin: .5rem 0 2rem;
+      }
+    }
+  
+    .links-footer{
+      display: flex;
+      flex-direction: column;
+      
+      a{
+        color: $blanco;
+        font-size: 1.8rem;
+        margin-bottom: .5rem;
+      }
+    }
+  
+    .contactos-footer{
+      display: flex;
+      flex-direction: column;
+  
+      span{
+        color: $blanco;
+        font-size: 1.8rem;
+        margin-bottom: .5rem;
+  
+        i{
+          color:rgb(255, 255, 255);
+          margin-right: .5rem;
+        }
+      }
+    }
+  
+    .copy{
+      padding: 1.5rem 0;
+      text-align: center;
+      background: $azul;
+      border-top: 2px solid rgb(0, 0, 0);
+  
+      span{
+        font-size: 1.7rem;
+  
+        .span{
+          color:rgb(255, 255, 255) ;
+        }
+      }
+    }
+  }
+
 
 
 
@@ -771,6 +857,20 @@ h1{
     section .container-img-texto .items-img-texto img{
         width: 40rem;
         height: 30rem;
+    }
+    
+
+    .footer .container-footer{
+        display: flex;
+        flex-direction: column;
+    
+        hr{
+          width: 50%;
+        }
+      }
+    
+      .footer .container-footer .sobre-nosotros-footer{
+        width: 90%;
     }
 }
 
